[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyyescrypt"
version = "0.1.1"
description = "Python bindings for yescrypt using a tiny Go shared library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyyescrypt", "pyyescrypt.*"]

[tool.setuptools.package-data]
pyyescrypt = ["py.typed", "_native/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
skip = ["*-win32", "*-win_amd64", "*-win_arm64"]
build-verbosity = 1
before-build = "sh -c 'set -eux; make native'"
test-command = "sh -c './tools/inspect-native.sh && python -m pytest -q'"
test-requires = ["pytest"]

# Only build CPython wheels
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
